// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files renders correctly 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View>
      <Icon
        name="Document"
      />
      <Text
        numberOfLines={2}
      >
        foo.pdf
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View>
      <Icon
        name="Document"
      />
      <Text
        numberOfLines={2}
      >
        bar.zip
      </Text>
    </View>
  </View>
</View>
`;

exports[`JoinProjectButton renders as expected 1`] = `
<Button
  onPress={[Function]}
  text="Join Project"
/>
`;

exports[`JoinProjectButton renders as expected when leaving 1`] = `
<Button
  onPress={[Function]}
  text="Leave Project"
/>
`;

exports[`PostDetails renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
            />
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            pointerEvents="box-none"
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
              />
              <View
                pointerEvents="box-none"
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  nativeID="animatedComponent"
                  numberOfLines={1}
                  onLayout={[Function]}
                >
                  MockedScreen
                </Text>
              </View>
              <View
                pointerEvents="box-none"
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <SafeAreaView
                        edges={
                          Array [
                            "right",
                            "left",
                            "top",
                          ]
                        }
                      >
                        <View
                          collapsable={false}
                          nativeID="animatedComponent"
                        >
                          <RCTScrollView
                            ListFooterComponent={[Function]}
                            contentContainerStyle={
                              Object {
                                "flexGrow": 1,
                                "justifyContent": "flex-end",
                              }
                            }
                            data={Array []}
                            getItem={[Function]}
                            getItemCount={[Function]}
                            initialScrollIndex={0}
                            invertStickyHeaders={true}
                            inverted={true}
                            keyExtractor={[Function]}
                            keyboardDismissMode="interactive"
                            onContentSizeChange={[Function]}
                            onLayout={[Function]}
                            onMomentumScrollBegin={[Function]}
                            onMomentumScrollEnd={[Function]}
                            onMoveShouldSetResponder={[Function]}
                            onMoveShouldSetResponderCapture={[Function]}
                            onResponderEnd={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderReject={[Function]}
                            onResponderRelease={[Function]}
                            onResponderStart={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onScroll={[Function]}
                            onScrollBeginDrag={[Function]}
                            onScrollEndDrag={[Function]}
                            onStartShouldSetResponder={[Function]}
                            onStartShouldSetResponderCapture={[Function]}
                            renderItem={[Function]}
                            scrollEventThrottle={50}
                            stickyHeaderIndices={Array []}
                            style={
                              Array [
                                Object {
                                  "transform": Array [
                                    Object {
                                      "scaleY": -1,
                                    },
                                  ],
                                },
                                undefined,
                              ]
                            }
                          >
                            <View>
                              <View
                                onLayout={[Function]}
                              >
                                <View>
                                  <View>
                                    <View>
                                      <View
                                        accessible={true}
                                        collapsable={false}
                                        focusable={true}
                                        nativeID="animatedComponent"
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                      />
                                    </View>
                                    <View>
                                      <View
                                        accessible={true}
                                        collapsable={false}
                                        focusable={true}
                                        nativeID="animatedComponent"
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                      >
                                        <Text>
                                          Houdini
                                        </Text>
                                      </View>
                                      <View>
                                        <Text>
                                          4 years ago
                                        </Text>
                                        <RCTScrollView
                                          data={
                                            Array [
                                              Object {
                                                "id": "1",
                                                "name": "topic1",
                                              },
                                            ]
                                          }
                                          getItem={[Function]}
                                          getItemCount={[Function]}
                                          horizontal={true}
                                          keyExtractor={[Function]}
                                          onContentSizeChange={[Function]}
                                          onLayout={[Function]}
                                          onMomentumScrollBegin={[Function]}
                                          onMomentumScrollEnd={[Function]}
                                          onScroll={[Function]}
                                          onScrollBeginDrag={[Function]}
                                          onScrollEndDrag={[Function]}
                                          removeClippedSubviews={false}
                                          renderItem={[Function]}
                                          scrollEventThrottle={50}
                                          showsHorizontalScrollIndicator={false}
                                          stickyHeaderIndices={Array []}
                                          viewabilityConfigCallbackPairs={Array []}
                                        >
                                          <View>
                                            <View
                                              onLayout={[Function]}
                                            >
                                              <View
                                                accessible={true}
                                                collapsable={false}
                                                focusable={true}
                                                nativeID="animatedComponent"
                                                onClick={[Function]}
                                                onResponderGrant={[Function]}
                                                onResponderMove={[Function]}
                                                onResponderRelease={[Function]}
                                                onResponderTerminate={[Function]}
                                                onResponderTerminationRequest={[Function]}
                                                onStartShouldSetResponder={[Function]}
                                              >
                                                <Text>
                                                  #
                                                  topic1
                                                </Text>
                                              </View>
                                            </View>
                                          </View>
                                        </RCTScrollView>
                                      </View>
                                    </View>
                                    <View>
                                      <Icon
                                        name="Pin"
                                      />
                                      <View>
                                        <Text>
                                          REQUEST
                                        </Text>
                                      </View>
                                      <View
                                        accessible={true}
                                        collapsable={false}
                                        focusable={true}
                                        hitSlop={
                                          Object {
                                            "bottom": 10,
                                            "left": 10,
                                            "right": 15,
                                            "top": 20,
                                          }
                                        }
                                        nativeID="animatedComponent"
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                      >
                                        <Icon
                                          name="More"
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      nativeID="animatedComponent"
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View
                                        accessibilityIgnoresInvertColors={true}
                                      >
                                        <Image
                                          source={
                                            Object {
                                              "uri": "foom.png",
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <View>
                                    <View>
                                      <Text>
                                        Hi
                                      </Text>
                                    </View>
                                    <View>
                                      <Text
                                        style={
                                          Object {
                                            "color": "#5D757A",
                                            "fontFamily": "Circular-Book",
                                            "fontSize": 14,
                                            "lineHeight": 20,
                                            "marginTop": 12,
                                          }
                                        }
                                      >
                                        Lo
                                      </Text>
                                    </View>
                                  </View>
                                  <View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      nativeID="animatedComponent"
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View>
                                        <Icon
                                          name="Document"
                                        />
                                        <Text
                                          numberOfLines={2}
                                        >
                                          foo.pdf
                                        </Text>
                                      </View>
                                    </View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      nativeID="animatedComponent"
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View>
                                        <Icon
                                          name="Document"
                                        />
                                        <Text
                                          numberOfLines={2}
                                        >
                                          bar.zip
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    ACTIVITY
                                  </Text>
                                  <View>
                                    <View>
                                      <View>
                                        <Image
                                          source={
                                            Object {
                                              "testUri": "../../../assets/default-user-avatar.png",
                                            }
                                          }
                                        />
                                      </View>
                                      <View>
                                        <Image
                                          source={
                                            Object {
                                              "testUri": "../../../assets/default-user-avatar.png",
                                            }
                                          }
                                        />
                                      </View>
                                      <Text>
                                        Jebobo and Lobster commented
                                      </Text>
                                    </View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      nativeID="animatedComponent"
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <Icon
                                        name="ArrowUp"
                                      />
                                      <Text>
                                        8
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </View>
                        <View
                          collapsable={false}
                          nativeID="animatedComponent"
                          testID="container"
                        >
                          <View
                            onLayout={[Function]}
                            style={
                              Object {
                                "backgroundColor": "#f4f5f7",
                                "borderWidth": 0,
                                "flex": 1,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "paddingBottom": 0,
                              }
                            }
                          >
                            <View
                              onBlur={[Function]}
                              onFocus={[Function]}
                            >
                              <View>
                                <TextInput
                                  editable={true}
                                  multiline={true}
                                  onChangeText={[Function]}
                                  onSelectionChange={[Function]}
                                  placeholder="Write a comment..."
                                  placeholderTextColor="#c0c6cd"
                                  underlineColorAndroid="transparent"
                                  value=""
                                />
                                <View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      Object {
                                        "bottom": 7,
                                        "left": 7,
                                        "right": 7,
                                        "top": 7,
                                      }
                                    }
                                    nativeID="animatedComponent"
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text>
                                      @
                                    </Text>
                                  </View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      Object {
                                        "bottom": 7,
                                        "left": 7,
                                        "right": 7,
                                        "top": 7,
                                      }
                                    }
                                    nativeID="animatedComponent"
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text>
                                      #
                                    </Text>
                                  </View>
                                </View>
                              </View>
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 5,
                                  }
                                }
                                nativeID="animatedComponent"
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": undefined,
                                        "fontSize": 26,
                                      },
                                      undefined,
                                      Object {
                                        "fontFamily": "Material Icons",
                                        "fontStyle": "normal",
                                        "fontWeight": "normal",
                                      },
                                      Object {},
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </SafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
